<resources>
    <string name="app_name">delivery</string>
    <string name="todo">todoo</string>
    <string name="emailaddress">emailaddress</string>
    <string name="emailaddresss">emailaddresss</string>
    <string name="login">loginn</string>
    <string name="creat_new_akun">creat_new_akunn</string>
    <string name="password">passwordd</string>
    <string name="todoo">todooo</string>
    <string name="go_ar">go_arr</string>
    <string name="delivery">deliveryy</string>
    <string name="e_a_t_s">e_a_t_ss</string>
    <string name="get_start">get_startt</string>
    <string name="todooo">TODO</string>
    <string name="title">title</string>
    <string name="add">+Add</string>
    <string name="titlee">title</string>
    <string name="todoooo">TODO</string>
    <string name="home">Home</string>
    <string name="todooooo">TODO</string>
    <string name="search_product">Search Product</string>
    <string name="todooooooo">TODO</string>
    <string name="_20_discount">20% Discount</string>
    <string name="categories">Categories</string>
    <string name="special_for_you">Special For You</string>
    <string name="sweet_and_crispy_chicken_wings">Sweet and Crispy Chicken Wings</string>
    <string name="order_now">Order Now</string>
    <string name="goar">GO-AR</string>
    <string name="deliveryy">Delivery</string>
    <string name="e_a_t_sS">E A T S</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mychart">MyChart</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="profile">Profile</string>
    <string name="_20_discountt">20% Discount</string>
    <string name="sweet_and_crispy_sirarichaa">Sweet and Crispy Siraricha</string>
    <string name="order_noww">Order Now</string>
    <string name="popularr">Popular</string>
    <string name="categoriess">Categories</string>
    <string name="search_productt">Search Product</string>
    <string name="homee">Home</string>
    <string name="to">TODO</string>
    <string name="td">TODO</string>
    <string name="sweet_and_crispy_siraricha">sweet_and_crispy_sirarichaa</string>
    <string name="checkout">CheckOut</string>
    <string name="feed_details">Feed Details</string>
    <string name="crispy_baked_honey_garlic_chicken">Crispy Baked Honey Garlic Chicken</string>
    <string name="_4_00">$.4.00</string>
    <string name="description">Description</string>
    <string name="tender_crispy_baked_chicken_bites_in_a_sticky_honey_sriracha_sauce_make_the_perfect_weeknight_meal_or_party_appetizer_for_dinner_serve_over_rice_or_salad_for_appetizers_stick_with_toothpicks_and_pass_around_a_platter_having_someone_to_sweep_away_your_dishes_is_nice_and_all_but_when_we_tire_of_single_serving_restaurant_meals_i_cook_a_big_batch_of_something_just_as_delicious_as_dinner_out_recreating_a_scrumptious_restaurant_quality_bowl_of_deliciousness_is_my_favorite_trick_i_ve_picked_up_since_learning_to_cook_and_this_is_the_exact_reason_why_you_should_never_go_out_to_eat_with_a_food_blogger_you_won_t_find_me_straining_for_the_perfect_instagram_angles_on_my_spaghetti_however_you_will_find_me_twirling_my_fork_and_trying_to_pick_apart_what_makes_that_sauce_just_so_damn_good_i_d_say_it_s_a_problem_but_my_family_isn_t_complaining_about_all_the_delish_copycat_meals">Tender, crispy baked chicken bites in a sticky honey-Sriracha sauce make the perfect weeknight meal or party appetizer. For dinner, serve over rice or salad. For appetizers, stick with toothpicks and pass around a platter. Having someone to sweep away your dishes is nice and all, but when we tire of single-serving restaurant meals, I cook a big batch of something just as delicious as dinner out! Recreating a scrumptious, restaurant quality bowl of deliciousness is my favorite trick I’ve picked up since learning to cook. And this is the exact reason why you should never go out to eat with a food blogger. You won’t find me straining for the perfect Instagram angles on my spaghetti. However, you will find me twirling my fork and trying to pick apart what makes that sauce just so damn good. I’d say it’s a problem, but my family isn’t complaining about all the delish copycat meals!</string>
</resources>