<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8B8B8"
    tools:context=".Activity.ShowDetailActivity">

    <ScrollView
        android:id="@+id/showDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/feed_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="-2dp">

            <ImageView
                android:id="@+id/foodPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/food" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/crispy_baked_honey_garlic_chicken"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dollarTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/_4_00"
                android:textColor="#FED049"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="23dp"
                android:text="@string/description"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:text="@string/tender_crispy_baked_chicken_bites_in_a_sticky_honey_sriracha_sauce_make_the_perfect_weeknight_meal_or_party_appetizer_for_dinner_serve_over_rice_or_salad_for_appetizers_stick_with_toothpicks_and_pass_around_a_platter_having_someone_to_sweep_away_your_dishes_is_nice_and_all_but_when_we_tire_of_single_serving_restaurant_meals_i_cook_a_big_batch_of_something_just_as_delicious_as_dinner_out_recreating_a_scrumptious_restaurant_quality_bowl_of_deliciousness_is_my_favorite_trick_i_ve_picked_up_since_learning_to_cook_and_this_is_the_exact_reason_why_you_should_never_go_out_to_eat_with_a_food_blogger_you_won_t_find_me_straining_for_the_perfect_instagram_angles_on_my_spaghetti_however_you_will_find_me_twirling_my_fork_and_trying_to_pick_apart_what_makes_that_sauce_just_so_damn_good_i_d_say_it_s_a_problem_but_my_family_isn_t_complaining_about_all_the_delish_copycat_meals"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>